change template to v1

--- a/deploy/kubernetes/podinfo-dep.yaml
+++ b/deploy/kubernetes/podinfo-dep.yaml
@@ -3,8 +3,13 @@ apiVersion: apps/v1 # for versions before 1.6.0 use extensions/v1beta1
 kind: Deployment
 metadata:
   name: podinfo
+  labels:
+    app: podinfo
 spec:
   replicas: 1
+  selector: 
+    matchLabels: 
+      app: podinfo
   template:
     metadata:
       labels:
